# htmplate

./: Cargo.toml  README.md  deno.json  test.html  test.templated.html
htmplate/: Cargo.toml  build.rs  tsconfig.json
htmplate-cli/: Cargo.toml
htmplate-cli/src/: main.rs
htmplate-cli/src/actions/: bundle.rs  mod.rs  template.rs  write_library.rs
htmplate-cli/src/cli/: assets.rs  bundle.rs  list.rs  mod.rs  template.rs  watch.rs
htmplate-derive/: Cargo.toml
htmplate-derive/src/: lib.rs
htmplate-derive/tests/: test.rs
htmplate/src/: assets.rs  htmplate_element.rs  icon.rs  lib.rs  main.rs
htmplate/src/assets/: build-scripts.ts
htmplate/src/assets/scripts/: build.ts  fetch.ts  form.ts  lib.ts  temporal.ts
htmplate/src/assets/styles/: alert.css  base.css  button.css  colour.css  form.css  layout.css  lib.css  link-button.css  typography.css  utilities.css
htmplate/src/htmplates/: alert.rs  footer.rs  form_alert.rs  form_submit.rs  form_text_input.rs  icon.rs  metadata.rs  mod.rs  title.rs
htmplate/src/htmplates/alert/: mod.rs  template.html
htmplate/src/htmplates/footer/: mod.rs  template.html
htmplate/src/htmplates/form/: alert.html  alert.rs  check_input.html  check_input.rs  mod.rs  submit.html  submit.rs  text_input.html  text_input.rs
htmplate/src/htmplates/hr/: mod.rs  template.html
htmplate/src/htmplates/icon_button/: button.template.html  link.template.html  mod.rs
htmplate/src/htmplates/metadata/: mod.rs  template.html
htmplate/src/htmplates/title/: mod.rs  template.html
preview/: index.html  index.js  index.js.map  index.template.html  index.ts  output.html  source.html
preview/lib/: base64.d.ts  base64.js  fetch.d.ts  fetch.js  form.d.ts  form.js  form.ts  lib.min.css  style.min.css
src/: lib.rs  main.rs
src/htmplates/: footer.rs  metadata.rs  mod.rs  title.rs
tests/: output.html  source.html
