[package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "htmplate"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "htmplate"
required-features = ["cli"]

[dependencies]
lol_html = { version = "2.5" }

clap = { version = "4.5", features = ["derive"], optional = true }
notify = { version = "8.1", optional = true }
notify-debouncer-full = { version = "0.5", optional = true }
ts-cli-helper = { version = "0.5", optional = true }
ts-rust-helper = { version = "0.5", features = ["styled"], optional = true }

[features]
cli = [
    "dep:clap",
    "dep:notify",
    "dep:notify-debouncer-full",
    "dep:ts-cli-helper",
    "dep:ts-rust-helper",
]

[lints.rust]
"missing_docs" = "warn"
"unused_qualifications" = "warn"

[lints.clippy]
"as_conversions" = "warn"
"cast_lossless" = "warn"
"dbg" = "warn"
"inconsistent_struct_constructor" = "warn"
"todo" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"
