[workspace]
members = ["htmplate", "htmplate-cli", "htmplate-derive"]
resolver = "2"

[workspace.package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
version = "0.3.8"

[workspace.lints.rust]
"missing_docs" = "warn"
"unused_qualifications" = "warn"

[workspace.lints.clippy]
"as_conversions" = "warn"
"cast_lossless" = "warn"
"dbg" = "warn"
"inconsistent_struct_constructor" = "warn"
"todo" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"
