[package]
name = "htmplate-cli"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = { version = "8.1" }
pathdiff = { version = "0.2" }
ts-cli-helper = { version = "0.6" }
ts-rust-helper = { version = "0.7", features = ["styled"] }

htmplate = { path = "../htmplate" }

[lints]
workspace = true
