[package]
name = "htmplate-cli"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = { version = "8.1" }
ts-cli-helper = { version = "0.6" }
ts-rust-helper = { workspace = true, features = ["styled"] }

log = { version = "0.4" }
simple_logger = { version = "5.0", default-features = false, features = ["colors"] }

htmplate = { path = "../htmplate" }

[lints]
workspace = true
