[package]
name = "htmplate-cli"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
argh = { version = "0.1", default-features = false, features = ["help"] }
notify = { version = "8.1" }
ts-ansi = "0.1"
ts-error = { version = "0.2", features = ["std"] }
ts-path = { workspace = true }

htmplate = { path = "../htmplate" }

[lints]
workspace = true
