[package]
name = "htmplate"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
htmplate-derive = { path = "../htmplate-derive" }
lol_html = { version = "2.5" }
regex = { version = "1" }
ts-rust-helper = { workspace = true }

[lints]
workspace = true
